fix: add featured providers to separate completely with featured artists